src/objects/Address_Role__c.object
<CustomObject>
    <fields>
        <fullName>AccountHierarchyLevel__c</fullName>
        <description>It returns the hierarchy level from the account related to the address.</description>
        <formula>TEXT(Address__r.Account__r.Hierarchy_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountHierarchyLevel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>This is the Address to which this Address Role is associated.</description>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Addresses Role</relationshipLabel>
        <relationshipName>Addresses_Role</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Flow_By_Pass_VR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in flows or proces builder to bypass validation rules</description>
        <label>Flow_By_Pass_VR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_ID__c</fullName>
        <description>Global Unique Identifier for Address Roles. External ID = TRUE
            Display Format = &lt;3 character object prefix&gt; {0000000000}
            The Object prefix can be obtained after the Object has been created (after the Address Role object has been created).</description>
        <displayFormat>a0N{0000000000}</displayFormat>
        <label>Global ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Role_Type__c</fullName>
        <description>Uses the Address_Roles picklist value set.</description>
        <label>Role Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Address_Roles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIS_Location_ID__c</fullName>
        <description>An identifier in SIS that represents an Address that is only used as a Billing Address. As Salesforce is the master of Addresses, this identifier is needed so that it can be passed to SAP and in turn, to SIS so that invoices with the correct Address can be generated.</description>
        <label>SIS Location ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Address Role</label>
    <nameField>
        <displayFormat>AR-{0000000}</displayFormat>
        <label>Address Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses Role</pluralLabel>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AirportShiptoOnly</fullName>
        <active>true</active>
        <description>Airport can Only have Shipping Role</description>
        <errorConditionFormula>AND(
Address__r.Account__r.RecordTypeDeveloperName__c =&quot;Airport&quot;,
OR(
 ISPICKVAL(Role_Type__c,&quot;Billing&quot;),
ISPICKVAL(Role_Type__c,&quot;Business&quot;)
)
)</errorConditionFormula>
        <errorMessage>Airport can Only have Shipping Role</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Avoid_Role_Creation</fullName>
        <active>true</active>
        <description>Avoid creating a role of billing or shipping if the account has not been created into SAP, meaning if Account_Activation_Context_Status__c on address role business context is not completed</description>
        <errorConditionFormula>AND(
NOT(Address__r.Account__r.Sold_To_Completed__c =&quot;Completed&quot;),
NOT(ISPICKVAL( Role_Type__c ,&quot;Business&quot;)),
NOT( Address__r.Account__r.RecordTypeDeveloperName__c =&quot;Airport&quot;),
NOT( ISPICKVAL(Address__r.Account__r.Hierarchy_Level__c,&quot;Branch&quot;))
)</errorConditionFormula>
        <errorMessage>You can not create an additional address if the SOLD TO of the customer has not been created into SAP</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SIS_Location_ID_format_check</fullName>
        <active>true</active>
        <description>SIS Location ID just accepts numbers from 001 to 999</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(Role_Type__c ,&quot;Shipping&quot;)),
NOT(ISBLANK(SIS_Location_ID__c)),
NOT(
REGEX(SIS_Location_ID__c,  &quot;[0-9]{3}&quot;))
)</errorConditionFormula>
        <errorMessage>SIS Location ID just accepts numbers from 001 to 999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sold_to_business_address_only</fullName>
        <active>true</active>
        <description>You can not create another role than &quot;Business&quot; for a Business Address</description>
        <errorConditionFormula>AND(
Address__r.Is_Business_Address__c =true,
!ISPICKVAL(Role_Type__c , &quot;Business&quot;),
NOT(
OR(
 (ISPICKVAL(Address__r.Account__r.Hierarchy_Level__c,&apos;branch&apos;)),
 (Address__r.Account__r.RecordTypeDeveloperName__c =&apos;Airport&apos;)
)
)
)</errorConditionFormula>
        <errorMessage>You can not create another role than &quot;Business&quot; for a Business Address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sold_to_not_business_address</fullName>
        <active>true</active>
        <description>Avoid creating a role of business for a not &quot;business&quot; address</description>
        <errorConditionFormula>AND(
Address__r.Is_Business_Address__c =false,
ISPICKVAL(Role_Type__c , &quot;Business&quot;)
)</errorConditionFormula>
        <errorMessage>You can not create a role of &quot;Business&quot; for a non Business Address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>branchAccountSoldToAddress</fullName>
        <active>true</active>
        <description>A Branch account type can not have a Business Address</description>
        <errorConditionFormula>AND( 
AccountHierarchyLevel__c=&apos;Branch&apos;,
ISPICKVAL( 	Role_Type__c ,&apos;Business&apos;)
)</errorConditionFormula>
        <errorMessage>A Branch account type can not have a Business Address</errorMessage>
    </validationRules>
</CustomObject>